# cogdl

./: .gitignore  .pre-commit-config.yaml  README.md  cogdl.db  docker-compose.dev.yml  example.env.py  pyproject.toml
api/: Dockerfile.dev  README.md  cogdl.db  main.py  pyproject.toml
api/src/models/: base_models.py  seasons.py  teams.py  users.py
api/src/services/: users_service.py
bot/: .dockerignore  .env.example  Dockerfile.dev  README.md  main.py  pyproject.toml
bot/src/cogs/: team_cogs.py  user_cogs.py
bot/src/ui/: team_creation_modal.py
lib/api/: cogdl.db  main.py
lib/api/db/: db.py
lib/api/db/fields/: division_field.py
lib/api/models/: base_models.py  stadiums.py  team_records.py  teams.py  users.py
lib/api/routes/: teams_routes.py  users_routes.py
lib/api/schemas/: users_schema.py
lib/api/services/: users_service.py
lib/bot/: .env.example  main.py
lib/bot/cogs/: misc_cogs.py  team_cogs.py  user_cogs.py
lib/bot/ui/: team_creation_modal.py
