[tool.poetry]
name = "cogdl"
version = "0.1.0"
description = "The Official Church of Gromp Dodgeball League"
authors = ["Parker Freestone <parkerfreestone@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"

[tool.black]
line-length = 88
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
